--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "web-vitals": "^2.1.4",
+    "zingchart": "^2.9.12",
+    "zingchart-react": "^3.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
