--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "zingchart-react": "^3.2.0"
   },
   "scripts": {
-    "start": "react-scripts",
-    "build": "react-scripts",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
