--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy-to-digital-ocean-droplet:
-    runs-on: Ubuntu 22.04 (LTS) x64
+    runs-on: ubuntu-latest
     name: deploy weathersasa
     steps:
       - name: Checkout master
