--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^9.1.0",
     "react-scripts": "^3.0.1",
     "redux": "^5.0.1",
+    "source-map-explorer": "^2.5.3",
     "web-vitals": "^2.1.4",
     "zingchart": "^2.9.12",
     "zingchart-react": "^3.2.0"
@@ -18,6 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "deploy": "scp -r ./build/* /var/www/weathersasa.com/html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
