--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && compress-cra",
+    "build": "react-scripts build",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "deploy": "scp -r ./build/* /var/www/weathersasa.com/html",
     "test": "react-scripts test",
@@ -41,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "compress-create-react-app": "^1.4.5"
   }
 }
