--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "react-scripts": "^3.0.1",
     "redux": "^5.0.1",
     "source-map-explorer": "^2.5.3",
-    "web-vitals": "^2.1.4",
-    "zingchart": "^2.9.12",
-    "zingchart-react": "^3.2.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
