fix timezone info

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@vis.gl/react-google-maps": "^1.5.4",
+    "luxon": "^3.7.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
@@ -30,6 +31,7 @@
     "@types/babel__traverse": "^7.20.7",
     "@types/estree": "^1.0.8",
     "@types/json-schema": "^7.0.15",
+    "@types/luxon": "^3.6.2",
     "@types/node": "^24.0.10",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
