--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc --noEmit && vite build",
     "deploy": "scp -r ./build/* /var/www/pixelmap.studio/html",
     "lint": "eslint .",
     "preview": "vite preview"
