--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,14 @@ dist-ssr
 # mock files
 /__mocks__/
 
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
